...
                android:textAlignment="center"
                android:textSize="32sp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_post_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_item_name_hint"
                android:inputType="text"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_post_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homemade" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_post_item_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_tags_hint"
                android:inputType="text"
                android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/b_post_action_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Photos"></Button>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_post_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_description_hint"
                android:lines="3"
                android:maxLength="140"
                android:maxLines="3" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_post_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_quantity_hint"
                android:inputType="number"
                android:lines="3" />
            </android.support.design.widget.TextInputLayout>
...
            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <Button
                android:id="@+id/et_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Location" />

            <TextView
...
