<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.grubmate.grubmate.SubscribeActionActivity"
    tools:showIn="@layout/activity_subscribe_action">
    <TextView
        android:id="@+id/tv_subscrile_action_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textAlignment="center"
        android:text="@string/subscribe_action_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:showDividers="middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_subscribe_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_item_name_hint"
                android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_subscribe_item_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_tags_hint"
                android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/cb_subscribe_allergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Filter Allergy"/>
            <Button
                android:id="@+id/b_subscription_time_period"
                android:layout_gravity="center_horizontal"
                android:text="Time Period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
